# FluidX3D

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md
examples/benchmark/: defines.hpp  main.cpp  setup.cpp  setup.hpp
src/: graphics.cpp  graphics.hpp  lbm.cpp  lbm.hpp  runtime.cpp  runtime.hpp
